sumo/tests/sumo/extended/emitter/errors/xml/missing_element_end2/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: expected end of tag 'vtypedistelem'
 In file 'input_definition.def.xml'
 At line/column 18/3.

Quitting (on error).
